----------------------- 17.7.29 Release [19-July-2017] ------------------------

19-July-2017
  + version_compare.js (build 29)

17-July-2017
  ^ phpxmlrpc 3.1.0 (build 28)

--------------------- 17.2.27 Release  [2-February-2017] ----------------------

2-February-2017
  + Joomla Update System (build 26, 27)

--------------------- 16.11.25 Release [29-November-2016] ---------------------

29-November-2016
  - PHP Console (build 25)
  + import Ajax (build 24)
  - Joomla 2.5 compatibility (build 23)
  + PHP Console (build 22)

------------------------ 16.5.21 Release  [1-May-2016] ------------------------

1-May-2016
  + link2 button - window.open (build 21)

----------------------- 16.4.20 Release [23-April-2016] -----------------------

20-April-2016
  ^ sendbydate button - mobile (build 20)
  ^ file button - mobile (build 20)

----------------------- 16.4.19 Release  [9-April-2016] -----------------------

9-April-2016
  ^ file button - plugins (build 19)

----------------------- 16.4.18 Release  [4-April-2016] -----------------------

4-April-2016
  ^ file button (build 18)
  ^ sendbydate button (build 17, 18)

---------------------- 16.1.16 Release [25-October-2015] ----------------------

25-October-2015
  ^ XMLRPC for PHP 3.0.1 (build 16)

--------------------- 16.1.15 Release [17-september-2015] ---------------------

17-September-2015
  ^ open file from server via jce filebrowser (filter: xml,gz) (build 15)

--------------------- 16.1.14 Release [15-september-2015] ---------------------

15-September-2015
  $ eshiol (build 14)

------------------------- 15.6.13 Build [5-June-2015] -------------------------

5-June-2015
  # JToolbarButtonFile (build 13)

---------------------- 15.2.12 Build  [23-February-2015] ----------------------

23-February-2015
  + Joomla! 1.6 compatibility (build 12)
  # 1056 - An error has occurred. Invalid controller: name='content', format=" " (build 12)
